# api-bench

./: .gitignore  BENCH.md  BENCH_arango.md  BENCH_maria.md  BENCH_pg.OLD.md  BENCH_pg.md  BENCH_redis.md  BENCH_sqlite.md  Pipfile  README.md  docker-compose.yaml  requirements.txt  startpgdocker.sh  testing_script.py
DB/: 2_generate_db_entries.py  generate_db_entries.py  generate_json_entries.py  retailer_api.json
DB/docker_maria/: Dockerfile  docker-compose.yml  prepare-db.sql  retailer_api_mariadb.sql
DB/docker_pg/: Dockerfile  docker-compose.yaml  prepare-db.sql  retailer_api_pg_12.sql  retailer_api_pg_16.sql
DB/dumps/: retailer_api.sql  retailer_api_public_retailer.csv  retailer_api_public_retailer.json
DB/sqlite/: retailer.sqlite
bench_arango/: BENCHMARKS.md  query_retailers_curl.sh  query_retailers_wrk.lua
bench_arango/Go/: app.go  go.mod  go.sum
bench_arango/NET/min6api/: Program.cs  README.md  appsettings.json  min6api.csproj
bench_maria/: BENCHMARKS.md
bench_maria/Elixir/Phoenix/: run_prod.sh
bench_maria/Elixir/elixir_sql/: .gitignore  README.md  mix.exs
bench_maria/Elixir/phoenix-ecto/: mix.exs
bench_maria/Elixir/retailer_api/: .gitignore  README.md  mix.exs
bench_maria/JS/bun-drizzle/: bun.lockb  package.json
bench_maria/JS/bun-sql/: package.json
bench_maria/JS/elysia-mariadb/: bun.lockb
bench_maria/JS/elysia-sql/: package.json  pm2.config.js
bench_maria/JS/express/: package-lock.json  package.json
bench_maria/JS/express-sql/: package.json
bench_maria/NET/8_Dapper/: Core8_Dapper.csproj  Program.cs  appsettings.json
bench_maria/NET/8_EF/: Core8_EF.csproj  appsettings.json
bench_maria/NET/9_Dapper/: Core9_Dapper.csproj
bench_maria/NET/9_EF/: Core9_EF.csproj  Program.cs  README.md
bench_pg/: BENCHMARKS.md
bench_pg/Elixir/Phoenix/: .gitignore  mix.exs  run_prod.sh
bench_pg/Elixir/retailixir/: .gitignore  LOG_LEVELS.md  README.md  mix.exs  run_prod.sh
bench_pg/Go/: .gitignore  go.mod  go.sum
bench_pg/Go/echo/: app.go
bench_pg/Go/entgo/: app.go  go.mod  go.sum
bench_pg/Go/fiber/: app.go  go.mod  go.sum
bench_pg/Go/gin/: app.go
bench_pg/Go/gorilla/: app.go
bench_pg/Go/helpers/: env.go
bench_pg/Go/iris/: app.go  go.mod  go.sum
bench_pg/Go/sqlc/: main.go  query.sql  retailer.sql  schema.sql
bench_pg/JS/: bun_nginx_lb.conf
bench_pg/JS/elysia/: bun.lockb  package.json
bench_pg/JS/elysia-drizzle/: bun.lockb  package.json  pnpm-lock.yaml
bench_pg/JS/elysia-postgres/: bun.lockb  package.json  spawn.ts
bench_pg/JS/es4x-app/: index.js  index.test.js  package.json
bench_pg/JS/express/: package-lock.json  package.json  pnpm-lock.yaml
bench_pg/JS/nanoexpress/: package.json
bench_pg/JS/nest-fastify/: package.json
bench_pg/JS/polka/: package.json
bench_pg/JS/vanilla/: package.json
bench_pg/NET/: Core5_6prev5_bench_win_autocannon.md  Core5_6prev5_bench_win_autocannon.txt  README.md  retailer.sln
bench_pg/NET/8_EF/: Core8_EF.csproj  Program.cs  README.md  appsettings.json
bench_pg/Rust/actix_diesel/: Cargo.toml
bench_pg/Rust/actix_diesel/src/: actions.rs  main.rs  schema.rs
bench_pg/Rust/rocket_diesel/: Cargo.toml  README.md  Rocket.toml
bench_pg/Rust/rocket_diesel/src/: models.rs  routes.rs  schema.rs
bench_pg/Rust/warp_pg_ws/: Cargo.toml  package.json
bench_pg/Rust/warp_pg_ws/src/: db.rs  error.rs  handler.rs  main.rs  models.rs
bench_redis/: BENCHMARKS.md
bench_sqlite/: BENCHMARKS.md
frameworks/Rust/rocket/: Cargo.toml  README.md  Rocket.toml
frameworks/Rust/rocket/src/: main.rs  models.rs  schema.rs
(+412 files in other folders)
