[package]
name = "actix-diesel-example"
version = "1.0.1"
authors = [
  "Nikolay Kim <fafhrd91@gmail.com>",
  "Rob Ede <robjtede@icloud.com>",
  "Bernd Malle <bernd.malle@gmail.com>"
]
# workspace = ".."
edition = "2018"

[dependencies]
# actix = "0.11.0-beta.2"
actix-web = "3.3.2"
actix-rt = "1.1.1"

bytes = "1.0.0"
diesel = { version = "^1.4.7", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3.1"
r2d2 = "0.8.9"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
# uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
