[package]
name = "actix-diesel-example"
version = "1.0.1"
authors = [
  "Nikolay Kim <fafhrd91@gmail.com>",
  "Rob Ede <robjtede@icloud.com>",
  "Bernd Malle <bernd.malle@gmail.com>"
]
# workspace = ".."
edition = "2021"

[dependencies]
actix = "0.12.0"
# actix-web = "4.0.0-beta.13"
# actix-rt = "2.5.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"

bytes = "1.0.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.9.0"
futures = "0.3.1"
r2d2 = "0.8.9"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
# uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
