[package]
name = "rocket_diesel"
version = "0.1.0"
authors = ["Bernd Malle <bernd.malle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# serde_json = "1.0.51"
serde = {version = "1.0.106", features = ["derive"] }
rocket = "0.4.7"
rocket_codegen = "0.4.5" # provides some useful macros
diesel = { version = "1.4.4", features = ["postgres"] }

### diesel_codegen is outdated !! and refs dotenv = 0.10.1
# diesel_codegen = "0.16.1"
dotenv = "0.15.0"

# r2d2 = "0.8.8"
# r2d2-diesel = "1.0.0"


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]

