[package]
name = "warp_pg_ws"
version = "0.1.0"
authors = ["Bernd Malle <bernd.malle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
warp = "0.3.1"
serde = "1.0.126"
serde_derive = "1.0.126"
