[package]
name = "warp_pg_ws"
version = "0.1.0"
authors = ["Bernd Malle <bernd.malle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
warp = "0.3.3"
mobc-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
mobc = "0.7"
serde = {version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.25"
