[package]
name = "rocket-example"
version = "0.1.0"
authors = ["Bernd Malle <bernd.malle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json = "0.12.4"
serde = {version = "1.0.106", features = ["derive"] }
# serde_json = "1.0.51"
rocket = "0.4.4"
rocket_contrib = "0.4.4"